--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Catch ME!</title>
+    <link rel="icon" href="@Url.Content("~/favicon.ico?v=2")" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
