--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -233,7 +233,7 @@
                                 <input type="hidden" name="projectId" value="@Model.project_id" />
                                 <div class="row">
                                     <div class="col-md-offset-1 col-md-4" >
-                                        <input type="file" name="file" />
+                                        <input type="file" required name="file" />
 
                                     </div>
                                     <div class="col-md-4">
@@ -263,7 +263,6 @@
                             <div class="task-title"><span style="font-size:.5em; padding:5px;margin-bottom:10px;" class="alert alert-info">C.@comment.comment_id</span> @(string.IsNullOrWhiteSpace(comment.title) ? "No Title.." : comment.title) - </div>
                             <small>@comment.user.fullname on @comment.created_on.Value.ToString("dd MMM yyyy HH:mm")</small>
                             <a href="javascript:void(0);" class="shownextsection toggleshowhide">@(cnt<3?"(hide)":"[more]")</a>
-
                             <section class="allcomments" style="display:@(cnt<3?"block":"none")">
                                 <h4 style="word-break:break-all">
                                     <span style="word-wrap:break-word">
@@ -284,7 +283,7 @@
                                 <section style="display:none">
                                     @Html.Partial("_EditComment", comment)
                                 </section>
-                                <a href="#" class="shownextsection"><small><span class="fa fa-plus"></span>&nbsp;Add Attachment</small></a>
+                                <a href="#" class="shownextsection"><small>|&nbsp;Add <span class="fa fa-paperclip"></span></small></a>
                                 <section style="display:none">
                                     <div class="row">
 
@@ -298,7 +297,7 @@
                                             <input type="hidden" name="comment_id" value="@comment.comment_id" />
                                             <div class="row">
                                                 <div class="col-md-offset-1 col-md-4">
-                                                    <input type="file" name="file" />
+                                                    <input type="file" required name="file" />
 
                                                 </div>
                                                 <div class="col-md-4">
