--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -9,8 +9,8 @@
     ViewBag.Title = "Catch Me";
 
     var countopen = Model.Where(x => x.status != 9).Count();
-    //var countme = Model.Where(x => x.assigned_to == session.Current.UserId && x.status != 9).Count();
-    var countme = Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 3)).Count();
+    var countme = Model.Where(x => x.assigned_to == session.Current.UserId && x.status != 9).Count();
+    //var countme = Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 3)).Count();
     var countclosed = Model.Where(x => x.status == 9).Count();
     var countopenbyme = Model.Where(x => x.owner == session.Current.UserId && x.status != 9).Count();
     var countsearched= Model.Where(x => x.IsFilteredOn).Count();
@@ -27,10 +27,18 @@
     
     
 }
-
+<style>
+    
+</style>
 
 <div>
-    <div class="pull-left"><h2>@session.Current.CurrentProject</h2></div>
+    <div class="pull-left">
+        <div class="project-title">@session.Current.CurrentProject</div>
+        @if (Model.Count() > 0)
+        {
+            <small class="text-muted">@Model.FirstOrDefault().project.description</small>
+        }
+    </div>        
     <div class="pull-right" style="margin-top:20px;">
         @if (session.Current.MyProjects != null && session.Current.MyProjects.Count() > 1)
         {
@@ -116,6 +124,7 @@ table.fixed td { overflow: hidden; }
                         <th width="20%">
                             Assigned
                         </th>
+                        <td></td>
                         <th width="10%">
                             @Html.DisplayNameFor(model => model.priority)
                         </th>
@@ -129,7 +138,9 @@ table.fixed td { overflow: hidden; }
                 </thead>
 
                 <tbody>
-                    @foreach (var item in Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 3)))
+                    
+                    @*@foreach (var item in Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 3)).OrderBy(x=>x.priority))*@
+                    @foreach (var item in Model.Where(x => x.assigned_to == session.Current.UserId && x.status != 9))
                     {
                         <tr>
                             <td>
@@ -148,6 +159,7 @@ table.fixed td { overflow: hidden; }
                                 @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
                                 @assignee
                             </td>
+                            <td><span class="color-white">@item.priority</span></td>
                             <td>
                                 <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
                             </td>
@@ -673,7 +685,7 @@ table.fixed td { overflow: hidden; }
 
             $('#tableme').DataTable({
                 "pageLength": 50,
-                "order": [[0, "desc"]]
+                "order": [[4, "desc"]]
             });
 
 
