--- a/CatchMe/Views/Tasks/ShowInfo.cshtml
+++ b/CatchMe/Views/Tasks/ShowInfo.cshtml
@@ -48,7 +48,7 @@
                 @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-5">
                     @*@Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })*@
-                    <textarea name="description" class="form-control" id="area2" style="width:450%">@Model.description</textarea>
+                    <textarea name="description" id="area2" cols="20" rows="2" style="width:620px;height:200px" placeholder="comment"></textarea>
 
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                 </div>
