--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -24,11 +24,23 @@
     }
 
     var countnotifications = Model.Where(x => x.isInNotificationList).Count();
+
+    var countinfos = 0;
+    var infoitems = new List<CatchMe.Models.information>();
+    if(Model.Count() >0)
+    {
+        countinfos = Model.FirstOrDefault().project.information.Count ;
+        infoitems = Model.FirstOrDefault().project.information.ToList();
+        
+    }
+    
     
     
 }
 <style>
-    
+.highlight {
+    background-color: yellow;
+}    
 </style>
 
 <div>
@@ -88,9 +100,9 @@ table.fixed td { overflow: hidden; }
             <li role="presentation" class="recentcolor"><a href="#recent" aria-controls="recent" role="tab" data-toggle="tab">Recent updates (@latest10.Count())</a></li>
         }
         
-        @if(countsearched >0)
+        @if (countsearched > 0)
         {
-            <li role="presentation"><a href="#searched" aria-controls="messages" role="tab" data-toggle="tab">Searched (@countsearched)</a></li>            
+            <li role="presentation" class="searchedcolor"><a href="#searched" aria-controls="messages" role="tab" data-toggle="tab"><b><span class="fa fa-files-o"></span> Searched</b> (@countsearched)</a></li>
         }
         @if (countnotifications > 0)
         {
@@ -98,7 +110,13 @@ table.fixed td { overflow: hidden; }
 
         }
 
-        
+        @if (countinfos > 0)
+        {
+            <li role="presentation" class="infocolor"><a href="#info" aria-controls="info" role="tab" data-toggle="tab"> <span class="fa fa-info-circle"></span> informational (@countinfos)</a></li>
+
+        }
+
+
     </ul>
 
     <!-- Tab panes -->
@@ -132,7 +150,7 @@ table.fixed td { overflow: hidden; }
                             Due on
                         </th>
 
-                        <th width="1%"></th>
+                        
                         <td></td>
                     </tr>
                 </thead>
@@ -168,11 +186,7 @@ table.fixed td { overflow: hidden; }
                                 @Html.DisplayFor(modelItem => item.due_date)
                             </td>
 
-                            <td>
-                                @*<a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>*@
-                                @*<a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>*@
-
-                            </td>
+                          
                             <td>
                                 <span class="fa fa-@(item.HasAttachment?"paperclip":"")"></span>
                             </td>
@@ -182,6 +196,7 @@ table.fixed td { overflow: hidden; }
             </table>
 
         </div>
+
         <div role="tabpanel" class="tab-pane @(countme > 0?"":"active" )" id="open">
 
             <div class="gap"></div>
@@ -257,9 +272,7 @@ table.fixed td { overflow: hidden; }
                 </tbody>
             </table>
 
-        </div>
-
-        
+        </div>        
       
         <div role="tabpanel" class="tab-pane" id="closed">
             <div class="gap"></div>
@@ -333,7 +346,6 @@ table.fixed td { overflow: hidden; }
                 </tbody>
             </table>
         </div>
-
 
         <div role="tabpanel" class="tab-pane" id="openbyme">
 
@@ -410,8 +422,6 @@ table.fixed td { overflow: hidden; }
             </table>
 
         </div>
-
-
 
         <div role="tabpanel" class="tab-pane" id="recent">
 
@@ -495,83 +505,86 @@ table.fixed td { overflow: hidden; }
 
         </div>
 
-
         <div role="tabpanel" class="tab-pane" id="searched">
 
             <div class="gap"></div>
+            @if(session.Current.searchFilter != null)
+            { 
+            @:&nbsp;&nbsp;Keyword: <b>@session.Current.searchFilter.keywords</b> (<a href="@Url.Action("ClearFilter")">clear</a>)
+            }
+            
+            <div id="searchtext">
+                <table class="table" id="tablesearched" style="width:100%">
 
-
-            <table class="table" id="tablesearched" style="width:100%">
-
-                <thead>
-                    <tr>
-                        <th width="5%">
-                            Id
-                        </th>
-                        <td></td>
-
-                        <td width="45%">
-                            Desc
-                        </td>
-
-                        <th width="20%">
-                            Assigned
-                        </th>
-                        <th width="10%">
-                            @Html.DisplayNameFor(model => model.priority)
-                        </th>
-                        <th width="14%">
-                            Due On
-                        </th>
-
-                        <th width="1%"></th>
-                        <td></td>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    @foreach (var item in Model.Where(x => x.IsFilteredOn).ToList())
-                    {
+                    <thead>
                         <tr>
-                            <td>
-                                <span class="text-muted fa-15x">@item.task_id</span>
-                            </td>
-                            <td>
-                                <span style="padding:7px 2px;" class="label label-@(item.StatusDescLabel)" data-toggle="tooltip" data-placement="left" title="@item.TypeDesc - @item.StatusDesc"><span style="font-size:1.5em" class="fa fa-fw fa-@(item.typeIcon)"></span></span>
+                            <th width="5%">
+                                Id
+                            </th>
+                            <td></td>
+
+                            <td width="45%">
+                                Desc
                             </td>
 
-                            <td>
-                                <div class="readmore">
-                                    <a href="@Url.Action("EditTask", new { id = item.task_id })">@Html.DisplayFor(modelItem => item.title)</a> (@item.TypeDesc)
-                                </div>
+                            <th width="20%">
+                                Assigned
+                            </th>
+                            <th width="10%">
+                                @Html.DisplayNameFor(model => model.priority)
+                            </th>
+                            <th width="14%">
+                                Due On
+                            </th>
 
-                            </td>
-                            <td>
-                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
-                                @assignee
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.PriorityDesc)
-                            </td>
-                            <td class="@(item.IsOverdue?"red":"")">
-                                @Html.DisplayFor(modelItem => item.due_date)
-                            </td>
-
-                            <td>
-                                @*<a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>*@
-                                <a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>
-
-                            </td>
-                            <td>
-                                <span class="fa fa-@(item.HasAttachment?"paperclip":"")"></span>
-                            </td>
+                            <th width="1%"></th>
+                            <td></td>
                         </tr>
-                                    }
-                </tbody>
-            </table>
+                    </thead>
+
+                    <tbody>
+                        @foreach (var item in Model.Where(x => x.IsFilteredOn).ToList())
+                        {
+                            <tr>
+                                <td>
+                                    <span class="text-muted fa-15x">@item.task_id</span>
+                                </td>
+                                <td>
+                                    <span style="padding:7px 2px;" class="label label-@(item.StatusDescLabel)" data-toggle="tooltip" data-placement="left" title="@item.TypeDesc - @item.StatusDesc"><span style="font-size:1.5em" class="fa fa-fw fa-@(item.typeIcon)"></span></span>
+                                </td>
+
+                                <td>
+                                    <div class="readmore">
+                                        <a href="@Url.Action("EditTask", new { id = item.task_id })">@Html.DisplayFor(modelItem => item.title)</a> (@item.TypeDesc)
+                                    </div>
+
+                                </td>
+                                <td>
+                                    @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
+                                    @assignee
+                                </td>
+                                <td>
+                                    <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
+                                </td>
+                                <td class="@(item.IsOverdue?"red":"")">
+                                    @Html.DisplayFor(modelItem => item.due_date)
+                                </td>
+
+                                <td>
+                                    @*<a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>*@
+                                    <a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>
+
+                                </td>
+                                <td>
+                                    <span class="fa fa-@(item.HasAttachment?"paperclip":"")"></span>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
 
         </div>
-
 
         <div role="tabpanel" class="tab-pane" id="notified">
             <div class="gap"></div>
@@ -651,6 +664,60 @@ table.fixed td { overflow: hidden; }
             </table>
         </div>
 
+        <div role="tabpanel" class="tab-pane" id="info">
+            <div class="gap"></div>
+            <table class="table" id="tableinfo" style="width:100%">
+
+                <thead>
+                    <tr>
+                        <th>
+                            Id
+                        </th>
+                        
+                        <th width="45%">
+                            Title
+                        </th>
+                        
+                        <th>
+                            Opened on
+                        </th>
+                        
+                        <th>Updated by</th>
+                        <th>Updated on</th>
+                        <th>Importance</th>
+                        
+                        <td></td>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    @foreach (var item in infoitems.OrderBy(i=>i.importance))
+                    {
+                        <tr>
+                            <td>
+                                <span class="text-muted fa-15x">@item.information_id</span>
+                            </td>
+                            <td>
+                                <span class="fa fa-15x fa-info-circle color-@item.ImportanceDesc.ToLower()"></span> <a href="@Url.Action("ShowInfo", new { id = item.information_id })">@item.title</a> 
+                            </td>
+                            <td>@item.created_on.Value.ToString("dd MMM yyyy HH:mm") </td>
+
+                            <td>@item.user.firstname</td>
+                            
+                            <td>@item.updated_on.Value.ToString("dd MMM yyyy HH:mm")</td>
+
+                            <td><span class="fa fa-circle color-@item.ImportanceDesc.ToLower()"></span>&nbsp; @item.ImportanceDesc</td>
+                            
+                            <td>
+                                <span class="fa fa-@(item.HasAttachment?"paperclip":"")"></span>
+                            </td>
+                            
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+
         
     </div>
 
@@ -670,6 +737,9 @@ table.fixed td { overflow: hidden; }
 
     <script>
         $(document).ready(function () {
+
+
+            //$('td').highlight('MTP');
 
 
             $('#tableopen').DataTable({
