--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -127,7 +127,7 @@ table.fixed td { overflow: hidden; }
             <div class="gap"></div>
 
 
-            <table class="table" id="tableme" style="width:100%">
+            <table class="table table-striped" id="tableme" style="width:100%">
                 <thead>
                     <tr>
                         <th width="5%">
